navigation now done

--- a/index.html
+++ b/index.html
@@ -24,8 +24,54 @@
 
 </head>
 <body>
+
+
+    <!-- ===================== Navigation =================== -->
+    <nav class="nav-bar">
+        <div class="container wrapper">
+            <div class="nav-container">
+                <a href="/" class="logo">
+                    <img src="/assets/logo.png" alt="Carbell Sarfo's Logo">
+                </a>
+    
+                <!-- nav Menu -->
+                <ul class="nav-list">
+                    <div class="nav-item">
+                        <a href="#section-hero" class="nav-link">Home</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#section-about" class="nav-link">About</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#section-portfolio" class="nav-link">Portfolio</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#section-contact" class="nav-link">Contact</a>
+                    </div>
+                </ul>
+    
+                <!-- Menu Button -->
+                <div class="nav-btn">
+                    <div class="lines"></div>
+                    <div class="lines"></div>
+                    <div class="lines"></div>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Navigation overlay -->
+    <div class="nav-overlay"></div>
+    <!-- end of navigation -->
+
+
+
+
+
+
+
     <!-- ===================== Section Hero =================== -->
-    <section class="section-hero">
+    <section class="section-hero" id="section-hero">
         <div class="container wrapper">
             <div class="hero-container">
                 <!-- hero text -->
@@ -50,7 +96,7 @@
 
 
     <!-- ===================== Section About =================== -->
-    <section class="section-about">
+    <section class="section-about" id="section-about">
         <div class="container wrapper">
             <h2 class="heading-primary">About me</h2>
             <h1 class="heading-secondary">This should be a brief Summary</h1>
@@ -72,7 +118,7 @@
     <!-- end of section about -->
 
     <!-- ===================== Section Portfolio =================== -->
-    <section class="section-portfolio">
+    <section class="section-portfolio" id="section-portfolio">
         <div class="container wrapper">
             <h2 class="heading-primary">My Portfolio</h2>
             <h1 class="heading-secondary">I will let my work speak for themselves</h1>
@@ -117,7 +163,7 @@
 
 
     <!-- ===================== Section Testimonials =================== -->
-    <section class="section-testimonials">
+    <section class="section-testimonials" id="section-testimonials">
         <div class="container wrapper">
             <h2 class="heading-primary">Testimonials</h2>
             <h1 class="heading-secondary">Their Words not mine</h1>
