blurry elements added

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 
     <!-- ===================== Section Hero =================== -->
     <section class="section-hero" id="section-hero">
+        <!-- blured background -->
+        <div class="blue-element t0 l0"></div>
+        <div class="yellow-element r0 b0"></div>
         <div class="container wrapper">
             <div class="hero-container">
                 <!-- hero text -->
@@ -97,6 +100,7 @@
 
     <!-- ===================== Section About =================== -->
     <section class="section-about" id="section-about">
+        <div class="yellow-element b0 l0"></div>
         <div class="container wrapper">
             <h2 class="heading-primary">About me</h2>
             <h1 class="heading-secondary">This should be a brief Summary</h1>
@@ -119,6 +123,7 @@
 
     <!-- ===================== Section Portfolio =================== -->
     <section class="section-portfolio" id="section-portfolio">
+        <div class="blue-element t0 r0"></div>
         <div class="container wrapper">
             <h2 class="heading-primary">My Portfolio</h2>
             <h1 class="heading-secondary">I will let my work speak for themselves</h1>
@@ -164,6 +169,7 @@
 
     <!-- ===================== Section Testimonials =================== -->
     <section class="section-testimonials" id="section-testimonials">
+        <div class="yellow-element b0 l0"></div>
         <div class="container wrapper">
             <h2 class="heading-primary">Testimonials</h2>
             <h1 class="heading-secondary">Their Words not mine</h1>
